| Summary: | ASTERISK-29743: bridges: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-15 08:18:01.000-0600 | Date Closed: | 2021-11-18 11:14:33.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Bridges/bridge_holding Bridges/bridge_softmix |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following appears in the file {{doxygen.log}}:
{code} bridges/bridge_holding.c:416: warning: documented empty return type of deferred_action bridges/bridge_holding.c:116: warning: documented empty return type of participant_idle_mode_setup bridges/bridge_softmix.c:1043: warning: documented empty return type of clear_talking bridges/bridge_softmix.c:611: warning: argument 'participants' of command @param is not found in the argument list of sfu_topologies_on_join(struct ast_bridge *bridge, struct ast_bridge_channel *joiner) bridges/bridge_softmix.c:621: warning: The following parameter of sfu_topologies_on_join(struct ast_bridge *bridge, struct ast_bridge_channel *joiner) is not documented: parameter 'bridge' bridges/bridge_softmix.c:1068: warning: documented empty return type of softmix_bridge_check_voice bridges/bridge_softmix.c:2131: warning: documented empty return type of softmix_bridge_stop bridges/bridge_softmix.c:1198: warning: documented empty return type of softmix_bridge_write_text bridges/bridge_softmix.c:890: warning: documented empty return type of softmix_bridge_write_video bridges/bridge_softmix.c:943: warning: documented empty return type of softmix_bridge_write_voice bridges/bridge_softmix.c:409: warning: documented empty return type of softmix_poke_thread {code} Beside those warning, there is a misuse of {{\retval}}: It allows a comma to give the same explanation to several return values. Therefore, if only one value is given, one may not use a comma after it. That issue was introduced more than 10 years ago with commit [7f23115|https://github.com/asterisk/asterisk/commit/7f23115]. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-15 08:18:02.178-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-18 11:14:34.651-0600 Change 17393 merged by Friendly Automation: bridges: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17393|https://gerrit.asterisk.org/c/asterisk/+/17393] By: Friendly Automation (friendly-automation) 2021-11-18 11:18:40.488-0600 Change 17391 merged by Friendly Automation: bridges: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17391|https://gerrit.asterisk.org/c/asterisk/+/17391] By: Friendly Automation (friendly-automation) 2021-11-18 11:18:51.209-0600 Change 17366 merged by Friendly Automation: bridges: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17366|https://gerrit.asterisk.org/c/asterisk/+/17366] By: Friendly Automation (friendly-automation) 2021-11-18 11:19:00.575-0600 Change 17392 merged by Friendly Automation: bridges: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17392|https://gerrit.asterisk.org/c/asterisk/+/17392] | ||